apps/local/external/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: remote-cluster-a-route
  namespace: external
spec:
  parentRefs:
  - name: gateway
    namespace: network
    sectionName: https
  hostnames:
  - "example.labs123.uk"
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: remote-cluster-a-backend
      port: 80
